# iclr_2026_analysis

./: .gitignore  .pre-commit-config.yml  0_First_glimpse_at_the_data.py  1_data_audit_and_features.py  2_eda.py  3_embeddings.py  4_clustering.py  5_interestingness.py  6_final_shortlist.py  7_visualizations.py  AGENTS.md  ICLR_Selected_Keywords_1.xlsx  classification_results.parquet  classification_results_with_reasoning.parquet  classify-script.py  cluster_summary.parquet  embed-keywords-script.py  embed-script.py  iclr2026_download.py  iclr_2026_accepted.parquet  iclr_2026_classified.parquet  keyword_mapping.parquet  keywords_clusters.tsv  pyproject.toml  texts_for_embedding.parquet
exports/: ai_for_life_sciences.csv  datasets_&_benchmarks.csv  inference_optimisation.csv  infrastructure.csv  robotics.csv  swe_agents.csv
legacy/: 0_First_glimpse_at_the_data.py  1_data_audit_and_features.py  2_eda.py  3_embeddings.py  4_clustering.py  5_interestingness.py  6_final_shortlist.py  7_visualizations.py
marimo_notebooks/: 1_5_keyword_canonicalization.py  1_data_audit_and_features.py  2_eda.py  3_embeddings.py  4_clustering.py  5_interestingness.py  6_final_shortlist.py  7_custom_keywords.py  8_5_llm_category_analysis.py  8_llm_classification.py  8_llm_classified_categories.py  try1.py
src/iclr_2026/: __init__.py
