[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "hdbscan>=0.8.42",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "umap-learn>=0.5.11",
]

[dependency-groups]
dev = [
    "prek>=0.3.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
